# katana-skipper

./: .gitignore  README-EKS.md  README-GCP.md  README-GKE.md  README-OCI.MD  README-OCI.md  README-OCI.md1.md  README-OKE.md  README.md  docker-compose-kubernetes.yml  docker-compose.yml  kubectl-remove.sh  kubectl-setup.sh  nginx_config.conf  skipper.key
.github/: FUNDING.yml
api/: Dockerfile  README.md  api-celery-pod.yaml  api-ingress.yaml  api-pod.yaml  endpoint.py  requirements.txt
api/api/: dependencies.py  models.py  router.py  tasks.py  worker.py
api/celery/: Dockerfile
backend/: Dockerfile  main.py  requirements.txt
backend/all_routers/: home.py
engine/: README.md  endpoint.py  requirements.txt
engine/api/: models.py  router.py  tasks.py  (+1 more)
event-handler/: README.MD
eventhandler/: LICENSE  requirements.txt  setup.py
frontend/: Dockerfile
logger/: Dockerfile  README.md  endpoint.py  logger-pod.yaml
rabbitmq/: Dockerfile  README.MD  docker-compose.yml  init.sh  rabbit-configmap.yaml  rabbit-rbac.yaml  rabbit-secret.yaml  rabbit-statefulset.yaml
scripts/: docker_rm_all.sh
services/: README.md
skipper-lib/: README.md  pyproject.toml
skipper-lib-js/: README.md  package-lock.json  package.json
skipper-lib/skipper_lib/: __main__.py
skipper-lib/skipper_lib/events/: event_producer.py  event_receiver.py  exchange_producer.py  exchange_receiver.py
skipper-lib/skipper_lib/logger/: logger_helper.py
skipper-lib/skipper_lib/workflow/: workflow_helper.py
workflow/: Dockerfile  README.md  endpoint.py  requirements.txt  workflow-pod.yaml
(+123 files in other folders)
