[tool.poetry]
name = "skipper-lib"
version = "1.1.5"
description = "Simple and flexible ML workflow engine"
authors = ["Andrej Baranovskij <andrejus.baranovskis@gmail.com>"]
# New attributes
license = "Apache License"
readme = "README.md"
homepage = "https://github.com/katanaml/katana-skipper"
repository = "https://github.com/katanaml/katana-skipper"
keywords = ["machine learning", "pipeline", "rabbitmq"]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.7",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
pika = "^1.2.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

# New scripts
[tool.poetry.scripts]
skipper-lib = 'skipper_lib:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
